--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,22 +1,52 @@
 {% extends 'catalog/base.html' %}
+{% load media_tag %}
 
 {% block content %}
 {% for object in object_list %}
 <div class="col-4 text-center">
     <div class="card mb-4 box-shadow">
         <div class="card-header">
-            <h4 class="my-0 font-weight-normal">{{ object }}</h4>
+            <h4 class="my-0 font-weight-normal">
+                {{ object }}
+            </h4>
         </div>
 
         <div class="card-body">
             <p class="mt-3 mb-4 m-3">
-                {{ object.description }}
+                <img src="{% mediapath object.photo %}" alt="{{ object }}" />
             </p>
-            <h1 class="card-title pricing-card-title">{{ object.price }}</h1>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+            <p>{{ object.description|truncatechars:100 }}</p>
+            <h2 class="card-title pricing-card-title">{{ object.price }}</h2>
+            <a href="{% url 'catalog:item' object.pk %}" class="btn btn-lg btn-block btn-outline-primary">Подробнее</a>
         </div>
-
     </div>
 </div>
 {% endfor %}
+
+{% if page.paginator.num_pages > 1 %}
+<nav aria-label="Страницы с товарами" class="mt-4">
+    <ul class="pagination justify-content-center">
+        <li class="page-item {% if page.has_previous == False %}{% endif %}">
+            <a class="page-link" href="{% if page.has_previous %}{{ page.previous_page_number }}{% endif %}"
+               aria-label="Предыдущая"><span aria-hidden="true">&laquo;</span></a>
+        </li>
+
+        {% for page_id in page.paginator.page_range %}
+        {% if page.number == page_id %}
+        <li class="page-item active" aria-current="page">
+            <span class="page-link">{{ page_id }}</span>
+        </li>
+        {% else %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_id }}">{{ page_id }}</a>
+        </li>
+        {% endif %}
+        {% endfor %}
+        <li class="page-item {% if page.has_next == False %}{% endif %}">
+            <a class="page-link" href="{% if page.has_next %}{{ page.next_page_number }}{% endif %}"
+               aria-label="Предыдущая"><span aria-hidden="true">&raquo;</span></a>
+        </li>
+    </ul>
+</nav>
+{% endif %}
 {% endblock %}
