--- a/catalog/templates/catalog/item.html
+++ b/catalog/templates/catalog/item.html
@@ -13,8 +13,11 @@
 <div class="col-lg-9 col-md-6 col-sm-12">
     <div class="card mb-4 box-shadow">
         <div class="card-body">
-            <small class="d-block mb-3 text-muted">Категория:
+            <small class="d-block text-muted">Категория:
                 {{ item.category }}
+            </small>
+            <small class="d-block mb-3 text-muted">Производитель:
+                {{ item.category.description }}
             </small>
             <p>
                 {{ item.description }}
@@ -22,6 +25,7 @@
             <h2 class="card-title pricing-card-title">Цена:
                 {{ item.price }}
             </h2>
+            <button type="button" class="w-100 btn btn-lg btn-success my-2">Купить</button>
         </div>
     </div>
 </div>
