Add default picture and condition

--- a/catalog/templates/catalog/item.html
+++ b/catalog/templates/catalog/item.html
@@ -1,11 +1,16 @@
 {% extends 'catalog/base.html' %}
 {% load media_tag %}
+{% load static %}
 
 {% block content %}
 <div class="col-lg-3 col-md-6 col-sm-12">
     <div class="card mb-4 box-shadow">
         <div class="card-body">
-            <img src="{% mediapath item.photo %}" alt="{{ item }}" />
+            {% if item.photo %}
+                <img src="{% mediapath item.photo %}" alt="{{ item }}" />
+            {% else %}
+                <img src="{% static 'img/default.png' %}" alt="{{ object }}" />
+            {% endif %}
         </div>
     </div>
 </div>
