--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,5 +1,6 @@
 {% extends 'catalog/base.html' %}
 {% load media_tag %}
+{% load static %}
 
 {% block content %}
 {% for object in page_obj %}
@@ -13,7 +14,11 @@
 
         <div class="card-body">
             <p class="mt-3 mb-4 m-3">
-                <img src="{% mediapath object.photo %}" alt="{{ object }}" />
+                {% if object.photo %}
+                    <img src="{% mediapath object.photo %}" alt="{{ object }}" />
+                {% else %}
+                    <img src="{% static 'img/default.png' %}" alt="{{ object }}" />
+                {% endif %}
             </p>
             <p>{{ object.description|truncatechars:100 }}</p>
             <h2 class="card-title pricing-card-title">{{ object.price }}</h2>
