--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-{% for object in page_obj %}
+{% for object in object_list %}
 <div class="col-4 text-center">
     <div class="card mb-4 box-shadow">
         <div class="card-header">
