I'am CRUD! Homework 21.1 task 2

--- a/catalog/templates/catalog/includes/inc_header.html
+++ b/catalog/templates/catalog/includes/inc_header.html
@@ -2,4 +2,5 @@
 <nav class="ms-5">
     <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:index' %}">Каталог</a>
     <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:contacts' %}">Контакты</a>
+    <a class="p-2 btn btn-outline-primary" href="{% url 'blog:blog' %}">Блог</a>
 </nav>
