--- a/catalog/templates/catalog/item.html
+++ b/catalog/templates/catalog/item.html
@@ -7,9 +7,9 @@
     <div class="card mb-4 box-shadow">
         <div class="card-body">
             {% if object.photo %}
-                <img src="{% mediapath object.photo %}" alt="{{ object }}" />
+            <img src="{% mediapath object.photo %}" alt="{{ object }}"/>
             {% else %}
-                <img src="{% static 'img/default.png' %}" alt="{{ object }}" />
+            <img src="{% static 'img/default.png' %}" alt="{{ object }}"/>
             {% endif %}
         </div>
     </div>
@@ -30,8 +30,13 @@
             <h2 class="card-title pricing-card-title">Цена:
                 {{ object.price }}
             </h2>
-            <button type="button" class="w-100 btn btn-lg btn-success my-2">Купить</button>
         </div>
     </div>
+    <p>
+        <a href="{% url 'catalog:item_update' object.pk %}"
+           class="m-1 btn btn-sm btn-outline-warning">Редактировать товар</a>
+        <a href="{% url 'catalog:item_delete' object.pk %}"
+           class="m-1 btn btn-sm btn-outline-danger">Удалить товар</a>
+    </p>
 </div>
 {% endblock %}
