--- a/catalog/templates/catalog/includes/inc_header.html
+++ b/catalog/templates/catalog/includes/inc_header.html
@@ -4,3 +4,11 @@
     <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:contacts' %}">Контакты</a>
     <a class="p-2 btn btn-outline-primary" href="{% url 'blog:blog' %}">Блог</a>
 </nav>
+<nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+        {% if user.is_authenticated %}
+        <a class="me-3 py-2 btn btn-outline-secondary" href="{% url 'users:logout' %}">Выйти</a>
+        {% else %}
+        <a class="me-3 py-2 btn btn-outline-secondary" href="{% url 'users:login' %}">Войти</a>
+        <a class="me-3 py-2 btn btn-outline-secondary" href="{% url 'users:register' %}">Регистрация</a>
+        {% endif %}
+</nav>
