--- a/users/templates/users/user_password_reset.html
+++ b/users/templates/users/user_password_reset.html
@@ -9,7 +9,7 @@
                 <div class="card-body">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button type="submit" class="form-control p-2 btn btn-outline-warning">Зарегистрироваться</button>
+                    <button type="submit" class="form-control p-2 btn btn-outline-warning">Восстановить пароль</button>
                 </div>
             </div>
         </div>
