Homework 22.2 additional task2 profile view

--- a/users/templates/users/password_reset_sent.html
+++ b/users/templates/users/password_reset_sent.html
@@ -2,10 +2,9 @@
 
 {% block content %}
 <div class="alert alert-info" role="alert">
-    <h4 class="alert-heading">Письмо восстановления отправлено!</h4>
     <p>
       На ваш адрес электронной почты было отправлено письмо со ссылкой на восстановление пароля.
-      Пожалуйста, проверьте свою электронную почту и нажмите на ссылку, чтобы восстановить пароль.<br />
+      Пожалуйста, проверьте свою электронную почту и нажмите на ссылку, чтобы восстановить или сменить пароль пользователя.<br />
       Если письмо не пришло, проверьте папку спам.
     </p>
 </div>
