--- a/users/templates/users/user_form.html
+++ b/users/templates/users/user_form.html
@@ -9,8 +9,9 @@
                 <div class="card-body">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button type="submit" class="form-control p-2 btn btn-outline-warning">Восстановить/сбросить пароль</button>
+                    <button type="submit" class="form-control p-2 btn btn-outline-warning">Сохранить</button>
                 </div>
+                <div class="card-footer"><a href="{% url 'users:password_reset' %}">Сменить пароль</a></div>
             </div>
         </div>
     </form>
