--- a/catalog/templates/catalog/includes/inc_header.html
+++ b/catalog/templates/catalog/includes/inc_header.html
@@ -6,6 +6,7 @@
 </nav>
 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
         {% if user.is_authenticated %}
+        <a class="me-2 py-2 btn btn-outline-secondary" href="{% url 'users:profile' %}">Профиль</a>
         <a class="me-2 py-2 btn btn-outline-secondary" href="{% url 'users:logout' %}">Выйти</a>
         {% else %}
         <a class="me-2 py-2 btn btn-outline-secondary" href="{% url 'users:login' %}">Войти</a>
