--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -18,6 +18,7 @@
                 </div>
             </div>
         </div>
+        {% if formset %}
         <div class="col-6">
             <div class="card mb-4 box-shadow">
                 <div class="card-body">
@@ -31,6 +32,7 @@
                 </div>
             </div>
         </div>
+        {% endif %}
     </form>
 </div>
 {% endblock %}
