Homework 23.2 mandatory part

--- a/catalog/templates/catalog/includes/inc_header.html
+++ b/catalog/templates/catalog/includes/inc_header.html
@@ -1,6 +1,7 @@
 <h5 class="my-0 mr-md-auto font-weight-normal">Cyberstore</h5>
 <nav class="ms-5">
     <a class="me-1 p-2 btn btn-outline-primary" href="{% url 'catalog:index' %}">Каталог</a>
+    <a class="me-1 p-2 btn btn-outline-primary" href="{% url 'catalog:categories' %}">Категории</a>
     <a class="me-1 p-2 btn btn-outline-primary" href="{% url 'catalog:contacts' %}">Контакты</a>
     <a class="me-1 p-2 btn btn-outline-primary" href="{% url 'blog:blog' %}">Блог</a>
 </nav>
